# mbox2eml

./: Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: release.yml
src/: main.rs
