[package]
name = "mbox2eml"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic-toml = "0.1.9"
mbox-reader = { git = "https://github.com/Tsai002/mbox-reader" }
serde = { version = "1.0.198", features = ["derive"] }
walkdir = "2.5.0"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
